force-app/main/default/objects/Student__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <label>College</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.University__c</field>
            <operation>equals</operation>
            <valueField>College__c.University__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>College__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>