force-app/main/default/objects/Student__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>Student Date of Birth.</description>
    <inlineHelpText>Date Of Birth(DD/MM/YYYY)</inlineHelpText>
    <label>DOB</label>
    <required>true</required>
    <type>Date</type>
</CustomField>