force-app/main/default/objects/Student__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <formula>College__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula</label>
    <type>Text</type>
</CustomField>