force-app/main/default/objects/Student__c/fields/Last_Name_del__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_del__c</fullName>
    <description>Student Last Name</description>
    <label>Last Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>