force-app/main/default/objects/Student__c/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <externalId>true</externalId>
    <label>Parent Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>