force-app/main/default/objects/Student__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <description>Student ID generated by System</description>
    <displayFormat>{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Student ID</label>
    <type>AutoNumber</type>
</CustomField>