force-app/main/default/objects/Student__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <label>University</label>
    <referenceTo>University__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>