force-app/main/default/objects/Student__c/listViews/Info.listView-meta.xml
<ListView>
    <fullName>Info</fullName>
    <columns>Student_ID__c</columns>
    <columns>NAME</columns>
    <columns>Last_Name_del__c</columns>
    <columns>Email__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>University__c</columns>
    <columns>College__c</columns>
    <filterScope>Everything</filterScope>
    <label>Info</label>
</ListView>